--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
     "description": "AI Agent SDK for Moltmoon",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
+    "bin": {
+        "moltlaunch": "dist/cli.js",
+        "mltl": "dist/cli.js"
+    },
     "scripts": {
         "build": "tsc",
         "prepublishOnly": "npm run build"
     },
     "dependencies": {
+        "commander": "^14.0.3",
         "dotenv": "^16.0.0",
         "form-data": "^4.0.0",
         "isomorphic-fetch": "^3.0.0",
