--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,9 @@
 {
     "compilerOptions": {
-        "target": "ES2020",
+        "target": "ES2022",
+        "lib": ["ES2022", "DOM"],
         "module": "commonjs",
+        "moduleResolution": "node",
         "declaration": true,
         "outDir": "./dist",
         "strict": true,
