--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "@chillbruhhh/moltmoon-sdk",
-    "version": "0.1.3",
+    "name": "@moltmoon/sdk",
+    "version": "0.1.4",
     "description": "AI Agent SDK for Moltmoon",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
